# webcheck

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SUMMARY.md  askama.toml  docker-compose.yml  webcheck.service
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: main.rs
src/templates/: index.html
templates/: index.html
tests/: basic.rs
