[package]
name = "webcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
chrono = { version = "0.4.34", features = ["serde"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
async-trait = "0.1.77"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.114"
askama = { version = "0.12.1" }
